correction de l'alignement des profile pics sur home page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -497,6 +497,7 @@ ul {
     margin-right: 0;
     width: 100%;
     height: 696px;
+    align-items: center;
 }
 
 .profile-pic1 {
